--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,5 +1,6 @@
 name: GitHub Actions 101
 
+# Triggers: https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on
 on: [push]
 
 jobs:
@@ -26,11 +27,29 @@ jobs:
         node-version: [14.x, 15.x]
 
     steps:
-      - uses: actions/checkout@v2
+      # actions/checkout: https://github.com/actions/checkout
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # actions/setup-node: https://github.com/actions/setup-node
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
+          # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
+
+      # # Dependencies caching: https://stackoverflow.com/a/64345698/4906586
+      # # actions/cache: https://github.com/actions/cache
+      # - name: Cache npm dependencies
+      #   uses: actions/cache@v2
+      #   with:
+      #     path: "~/.npm"
+      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-node-
+
       - run: npm ci
       - run: npm run build
       - run: npm run lint
