--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -53,3 +53,9 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run lint
+  Lint:
+    needs: Checker
+
+    steps:
+      - run: npm run lint
+
