--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,7 +18,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
-  Checker:
+  checker:
+    name: Checker
     runs-on: ubuntu-latest
 
     strategy:
@@ -53,8 +54,10 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run lint
-  Lint:
-    needs: Checker
+  lint:
+    name: Lint check
+    runs-on: ubuntu-latest
+    needs: checker
 
     steps:
       - run: npm run lint
