--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -54,36 +54,42 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm run lint
-  setup:
-    name: Setup
-    runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        # Check latest LTS and latest version
-        # node-version: [14.x, 15.x]
-        node-version: [14.x]
+  # setup:
+  #   name: Setup
+  #   runs-on: ubuntu-latest
 
-    steps:
-      # actions/checkout: https://github.com/actions/checkout
-      - name: Checkout
-        uses: actions/checkout@v2
+  #   strategy:
+  #     matrix:
+  #       # Check latest LTS and latest version
+  #       # node-version: [14.x, 15.x]
+  #       node-version: [14.x]
 
-      # actions/setup-node: https://github.com/actions/setup-node
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
+  #   steps:
+  #     # actions/checkout: https://github.com/actions/checkout
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
+
+  #     # actions/setup-node: https://github.com/actions/setup-node
+  #     - name: Use Node.js ${{ matrix.node-version }}
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ matrix.node-version }}
+  #         # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
+  #         cache: "npm"
+  #         cache-dependency-path: "**/package-lock.json"
 
   lint:
     name: Lint check
     runs-on: ubuntu-latest
-    needs: setup
+    # needs: setup
+    strategy:
+      matrix:
+        # Check latest LTS and latest version
+        node-version: [14.x, 15.x]
 
     steps:
-      - uses: actions/checkout@v1
+      - uses: .github/actions/setup@v1
+        with:
+          node-version: ${{ matrix.node-version }}
       - run: npm run lint
-
