Update reference to local file for composite action

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -89,7 +89,8 @@ jobs:
         node-version: [14.x, 15.x]
 
     steps:
-      - uses: .github/actions/setup@v1
+      # Use local file https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions#runsstepsuses
+      - uses: ./.github/actions/setup@v1
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm run lint
