--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -14,10 +14,10 @@ runs:
     #   uses: actions/checkout@v2
 
     # actions/setup-node: https://github.com/actions/setup-node
-    - name: Use Node.js ${{ node-version }}
+    - name: Use Node.js ${{ inputs.node-version }}
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ node-version }}
+        node-version: ${{ inputs.node-version }}
         # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
         cache: "npm"
         cache-dependency-path: "**/package-lock.json"
