--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,20 +4,21 @@ name: GitHub Actions 101
 on: [push]
 
 jobs:
-  Hello-World:
-    runs-on: ubuntu-latest
-    steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+  # Hello-World:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+  #     - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+  #     - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+  #     - name: Check out repository code
+  #       uses: actions/checkout@v2
+  #     - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+  #     - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+  #     - name: List files in the repository
+  #       run: |
+  #         ls ${{ github.workspace }}
+  #     - run: echo "🍏 This job's status is ${{ job.status }}."
+
   checker:
     name: Checker
     runs-on: ubuntu-latest
@@ -99,3 +100,34 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm run lint
+
+  build:
+    name: Build check
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        # Check latest LTS and latest version
+        node-version: [14.x, 15.x]
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        
+      - uses: ./.github/actions/setup
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - run: npm run build
+
+  test-unit:
+    name: Run unit test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+
+        uses: actions/checkout@v2
+      - uses: ./.github/actions/setup
+
+        with:
+          node-version: 14.x
+      - run: npm run test:unit
