--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -19,42 +19,42 @@ jobs:
   #         ls ${{ github.workspace }}
   #     - run: echo "🍏 This job's status is ${{ job.status }}."
 
-  checker:
-    name: Checker
-    runs-on: ubuntu-latest
+  # checker:
+  #   name: Checker
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        # Check latest LTS and latest version
-        node-version: [14.x, 15.x]
+  #   strategy:
+  #     matrix:
+  #       # Check latest LTS and latest version
+  #       node-version: [14.x, 15.x]
 
-    steps:
-      # actions/checkout: https://github.com/actions/checkout
-      - name: Checkout
-        uses: actions/checkout@v2
+  #   steps:
+  #     # actions/checkout: https://github.com/actions/checkout
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      # actions/setup-node: https://github.com/actions/setup-node
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
-          cache: "npm"
-          cache-dependency-path: "**/package-lock.json"
+  #     # actions/setup-node: https://github.com/actions/setup-node
+  #     - name: Use Node.js ${{ matrix.node-version }}
+  #       uses: actions/setup-node@v2
+  #       with:
+  #         node-version: ${{ matrix.node-version }}
+  #         # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
+  #         cache: "npm"
+  #         cache-dependency-path: "**/package-lock.json"
 
-      # # Dependencies caching: https://stackoverflow.com/a/64345698/4906586
-      # # actions/cache: https://github.com/actions/cache
-      # - name: Cache npm dependencies
-      #   uses: actions/cache@v2
-      #   with:
-      #     path: "~/.npm"
-      #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-      #     restore-keys: |
-      #       ${{ runner.os }}-node-
+  #     # # Dependencies caching: https://stackoverflow.com/a/64345698/4906586
+  #     # # actions/cache: https://github.com/actions/cache
+  #     # - name: Cache npm dependencies
+  #     #   uses: actions/cache@v2
+  #     #   with:
+  #     #     path: "~/.npm"
+  #     #     key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+  #     #     restore-keys: |
+  #     #       ${{ runner.os }}-node-
 
-      - run: npm ci
-      - run: npm run build
-      - run: npm run lint
+  #     - run: npm ci
+  #     - run: npm run build
+  #     - run: npm run lint
 
   # setup:
   #   name: Setup
@@ -83,11 +83,6 @@ jobs:
   lint:
     name: Lint check
     runs-on: ubuntu-latest
-    # needs: setup
-    strategy:
-      matrix:
-        # Check latest LTS and latest version
-        node-version: [14.x, 15.x]
 
     steps:
       # Needs checkout before calling a local action via the repository name
@@ -98,7 +93,7 @@ jobs:
       # must be .github/actions/setup/actions.yml
       - uses: ./.github/actions/setup
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 14.x
       - run: npm run lint
 
   build:
@@ -112,7 +107,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-        
+
       - uses: ./.github/actions/setup
         with:
           node-version: ${{ matrix.node-version }}
