--- a/.github/workflows/dependent.yaml
+++ b/.github/workflows/dependent.yaml
@@ -7,16 +7,11 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        # Check latest LTS and latest version
-        node-version: [14.x, 15.x]
-
     # actions/setup-node: https://github.com/actions/setup-node
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 14.x
         # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
         cache: "npm"
         cache-dependency-path: "**/package-lock.json"
