--- a/.github/workflows/dependent.yaml
+++ b/.github/workflows/dependent.yaml
@@ -7,15 +7,15 @@ jobs:
     name: Setup
     runs-on: ubuntu-latest
 
-    # actions/setup-node: https://github.com/actions/setup-node
-    - name: Use Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 14.x
-        # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
-        cache: "npm"
-        cache-dependency-path: "**/package-lock.json"
-
+    steps:
+      # actions/setup-node: https://github.com/actions/setup-node
+      - name: Use Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14.x
+          # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
+          cache: "npm"
+          cache-dependency-path: "**/package-lock.json"
 
   lint:
     name: Lint check
