--- a/.github/workflows/dependent.yaml
+++ b/.github/workflows/dependent.yaml
@@ -25,6 +25,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - run: npm run lint
 
   # build:
@@ -54,7 +55,6 @@ jobs:
 
     steps:
       - name: Checkout
+        uses: actions/checkout@v2
 
-        with:
-          node-version: 14.x
       - run: npm run test:unit
