Fix step id typo

--- a/.github/workflows/dependent.yaml
+++ b/.github/workflows/dependent.yaml
@@ -28,7 +28,7 @@ jobs:
           key: node-modules-${{ hashFiles('package-lock.json') }}
 
       - name: Install Dependencies
-        if: steps.cache.outputs.cache-hit != 'true'
+        if: steps.node-cache.outputs.cache-hit != 'true'
         run: npm install
 
   lint:
