--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -5,22 +5,28 @@ inputs:
   node-version:
     description: "Node version to install"
     required: true
+    default: lts/fermium
 
 runs:
   using: "composite"
   steps:
-    # # actions/checkout: https://github.com/actions/checkout
-    # - name: Checkout
-    #   uses: actions/checkout@v2
-
     # actions/setup-node: https://github.com/actions/setup-node
     - name: Use Node.js ${{ inputs.node-version }}
       uses: actions/setup-node@v2
       with:
         node-version: ${{ inputs.node-version }}
-        # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
-        cache: "npm"
-        cache-dependency-path: "**/package-lock.json"
+        # # https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#caching-packages-dependencies
+        # cache: "npm"
+        # cache-dependency-path: "**/package-lock.json"
 
-    - run: npm ci
+    - name: Cache Node Modules
+      id: node-cache
+      uses: actions/cache@v2
+      with:
+        path: node_modules
+        key: node-modules-${{ hashFiles('package-lock.json') }}
+
+    - name: Install Dependencies
+      if: steps.node-cache.outputs.cache-hit != 'true'
+      run: npm install
       shell: bash
