Add parallel jobs (#2)

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,24 +1,54 @@
-name: GitHub Actions 101
+name: Code checking
 
 on: [push]
 
 jobs:
-  Hello-World:
+  # ---------- Initialise environment by installing the dependencies
+  init:
+    name: Initialise Workflow
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        # 14.x, 15.x: for build testing
+        # lts/fermium: for other steps
+        node-version: [lts/fermium, 14.x, 15.x]
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      - name: Checkout
         uses: actions/checkout@v2
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
-  Checker:
+
+      - uses: ./.github/actions/setup
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      # Conditional steps not supported by composite actions. Also, the
+      # installation step should only be executed during the setup
+      - name: Install Dependencies
+        # Syntax: steps.{{ id }}.outputs.cache-hit
+        # See: https://www.jonathan-wilkinson.com/github-actions-cache-everything
+        if: steps.node-cache.outputs.cache-hit != 'true'
+        run: npm install
+
+  # ---------- Linting check
+  lint:
+    name: Lint check
     runs-on: ubuntu-latest
+    needs: init
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: ./.github/actions/setup
+
+      - run: npm run lint
+
+  # ---------- Build check on multiple node version
+  build:
+    name: Build check
+    runs-on: ubuntu-latest
+    needs: init
 
     strategy:
       matrix:
@@ -26,11 +56,25 @@ jobs:
         node-version: [14.x, 15.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: ./.github/actions/setup
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm ci
+
       - run: npm run build
-      - run: npm run lint
+
+  # ---------- Unit testing
+  test-unit:
+    name: Run unit test
+    runs-on: ubuntu-latest
+    needs: init
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: ./.github/actions/setup
+
+      - run: npm run test:unit
