--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "storybook:build": "build-storybook"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -49,7 +49,7 @@
     "prettier": "^2.2.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
-    "typescript": "~4.1.5",
+    "typescript": "^3.9.10",
     "vue-jest": "^5.0.0-0",
     "vue-loader": "^16.5.0"
   },
