--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-  pull_requests:
+  pull_request:
 
 jobs:
   # ---------- Initialise environment by installing the dependencies
