--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -20,20 +20,18 @@ jobs:
         with:
           node-version: lts/fermium
 
-      # Conditional steps not supported by composite actions. Also, the
-      # installation step should only be executed during the setup
-      - name: Install Dependencies
-        # Syntax: steps.{{ id }}.outputs.cache-hit
-        # See: https://www.jonathan-wilkinson.com/github-actions-cache-everything
-        if: steps.node-cache.outputs.cache-hit != 'true'
-        run: npm install
-
   # ---------- chromatic deployment
   chromatic-deployment:
     name: Chromatic deployment
     runs-on: ubuntu-latest
+    needs: init
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - uses: ./.github/actions/cache-restore
+
       - name: Publish to Chromatic
         uses: chromaui/action@v1
         # Chromatic GitHub Action options
