--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,14 +27,6 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
 
-      # Conditional steps not supported by composite actions. Also, the
-      # installation step should only be executed during the setup
-      - name: Install Dependencies
-        # Syntax: steps.{{ id }}.outputs.cache-hit
-        # See: https://www.jonathan-wilkinson.com/github-actions-cache-everything
-        if: steps.node-cache.outputs.cache-hit != 'true'
-        run: npm install
-
   # ---------- Linting check
   lint:
     name: Lint check
@@ -45,7 +37,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/cache-restore
 
       - run: npm run lint
 
@@ -64,7 +56,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/cache-restore
         with:
           node-version: ${{ matrix.node-version }}
 
@@ -80,6 +72,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/cache-restore
 
       - run: npm run test:unit
