Reorganise setup jobs

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,9 +23,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions/setup
+      - uses: ./.github/actions/cache-restore
         with:
           node-version: ${{ matrix.node-version }}
+
+      # Conditional steps not supported by composite actions. Also, the
+      # installation step should only be executed during the setup
+      - name: Install Dependencies
+        # Syntax: steps.{{ id }}.outputs.cache-hit
+        # See: https://www.jonathan-wilkinson.com/github-actions-cache-everything
+        if: steps.node-cache.outputs.cache-hit != 'true'
+        run: npm install
 
   # ---------- Linting check
   lint:
