--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -17,6 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: ./.github/actions/cache-restore
+        id: node-cache
         with:
           node-version: lts/fermium
 
