--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: ./.github/actions/cache-restore
+        id: node-cache
         with:
           node-version: ${{ matrix.node-version }}
 
