--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,7 +23,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions/cache-restore
+      # - uses: ./.github/actions/cache-restore
+      - uses: actions/Al-un/ci-github-actions/.github/actions/cache-restore
         id: node-cache
         with:
           node-version: ${{ matrix.node-version }}
@@ -46,7 +47,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - uses: ./.github/actions/cache-restore
+      # - uses: ./.github/actions/cache-restore
+      - uses: actions/Al-un/ci-github-actions/.github/actions/cache-restore
 
       - run: npm run lint
 
