--- a/.github/actions/cache-restore/action.yaml
+++ b/.github/actions/cache-restore/action.yaml
@@ -5,7 +5,7 @@ inputs:
   node-version:
     description: "Node version to use"
     required: true
-    default: lts/fermium
+    default: lts/*
 outputs:
   cache-hit:
     description: "Forward actions/cache cache-hit output"
