--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -36,7 +36,7 @@ jobs:
   chromatic-deployment:
     name: Chromatic deployment
     runs-on: ubuntu-latest
-    needs: init
+    # needs: init
 
     steps:
       # Chromatic caveat when using checkout@v2:
