--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,6 +3,11 @@ name: Code checking
 # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on
 on: [push]
 
+concurrency:
+  # Ensure only one workflow per branch is running
+  group: ${{ github.head_ref }}
+  cancel-in-progress: true
+
 jobs:
   # ---------- Initialise environment by installing the dependencies
   init:
