--- a/.github/workflows/chromatic.yaml
+++ b/.github/workflows/chromatic.yaml
@@ -17,31 +17,31 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  # # ---------- Initialise environment by installing the dependencies
-  # init:
-  #   name: Initialise Workflow
-  #   runs-on: ubuntu-latest
+  # ---------- Initialise environment by installing the dependencies
+  init:
+    name: Initialise Workflow
+    runs-on: ubuntu-latest
 
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - uses: ./.github/actions/cache-restore
-  #       id: node-cache
+      - uses: ./.github/actions/cache-restore
+        id: node-cache
 
-  #     # Conditional steps not supported by composite actions. Also, the
-  #     # installation step should only be executed during the setup
-  #     - name: Install Dependencies
-  #       # Syntax: steps.{{ id }}.outputs.cache-hit
-  #       # See: https://www.jonathan-wilkinson.com/github-actions-cache-everything
-  #       if: steps.node-cache.outputs.cache-hit != 'true'
-  #       run: npm install
+      # Conditional steps not supported by composite actions. Also, the
+      # installation step should only be executed during the setup
+      - name: Install Dependencies
+        # Syntax: steps.{{ id }}.outputs.cache-hit
+        # See: https://www.jonathan-wilkinson.com/github-actions-cache-everything
+        if: steps.node-cache.outputs.cache-hit != 'true'
+        run: npm install
 
   # ---------- chromatic deployment
   chromatic-deployment:
     name: Chromatic deployment
     runs-on: ubuntu-latest
-    # needs: init
+    needs: init
 
     steps:
       # Chromatic caveat when using checkout@v2:
@@ -51,7 +51,7 @@ jobs:
         with:
           fetch-depth: 0 # 👈 Required to retrieve git history
 
-      # - uses: ./.github/actions/cache-restore
+      - uses: ./.github/actions/cache-restore
 
       # For non-master branches (pull requests):
       - name: Publish to Chromatic
