--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -3,9 +3,9 @@ name: Code checking
 # https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions#on
 on: [push]
 
+# Ensure only one workflow per branch is running
 concurrency:
-  # Ensure only one workflow per branch is running
-  group: ${{ github.head_ref }}
+  group: ci-main-code-checking-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
