Keep 'simple' github action workflow but restrict it to an impossible branch pattern

--- a/.github/workflows/simple.yaml
+++ b/.github/workflows/simple.yaml
@@ -1,7 +1,10 @@
 name: Simple code checking
 
 # The standard use case would be executing those checks in a pull request
-on: pull_request
+on: 
+  pull_request:
+    branches:
+      - impossible-pattern/*
 
 jobs:
   checks:
